--- a/wearable/src/main/res/values/dimens.xml
+++ b/wearable/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="analog_hand_stroke">3dp</dimen>
+    <dimen name="digital_thick_stroke">3dp</dimen>
+    <dimen name="digital_thin_stroke">1dp</dimen>
 </resources>
